# cppimagefilterbase

./: .gitignore  CMakeLists.txt  Manager.cpp  Manager.h  area_rect.cpp  area_rect.h  definitions.h  filters.cpp  filters.h  filters_collection.cpp  filters_collection.h  kernel.cpp  kernel.h  main.cpp  png_toolkit.cpp  png_toolkit.h
